.aws/infra/ecs-service/template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "The template used to create an ECS Service from the ECS Console.",
  "Parameters": {
    "ECSClusterName": {
      "Type": "String",
      "Default": "dashboardapi"
    },
    "ECSServiceName": {
      "Type": "String",
      "Default": "dashboardapi-service"
    },
    "SecurityGroupName": {
      "Type": "CommaDelimitedList",
      "Default": "dashboardapi-elb-sg"
    },
    "SubnetIDs": {
      "Type": "CommaDelimitedList",
      "Default": "subnet-0f29d946190a6ec4a,subnet-04d889d3bc8780525,subnet-0494eb5b054aa600d,subnet-0e2c13cb81ab42ad7,subnet-02270fbc2df913749,subnet-07f4b66f4434c5106"
    },
    "VpcID": {
      "Type": "String",
      "Default": "vpc-0e32079ae4c6e7a58"
    },
    "LoadBalancerName": {
      "Type": "String",
      "Default": "dashboardapiecs"
    }
  },
  "Resources": {
    "ECSService": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": "dashboardapi",
        "CapacityProviderStrategy": [
          {
            "CapacityProvider": "FARGATE",
            "Base": 0,
            "Weight": 1
          }
        ],
        "TaskDefinition": "arn:aws:ecs:us-east-1:211125643417:task-definition/dashboardapi-taskdefinition:9",
        "ServiceName": "dashboardapi-service",
        "SchedulingStrategy": "REPLICA",
        "DesiredCount": 1,
        "AvailabilityZoneRebalancing": "ENABLED",
        "LoadBalancers": [
          {
            "ContainerName": "dashboardapi",
            "ContainerPort": 8080,
            "LoadBalancerName": {
              "Ref": "AWS::NoValue"
            },
            "TargetGroupArn": {
              "Ref": "TargetGroup"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "ENABLED",
            "SecurityGroups": [
              {
                "Ref": "SecurityGroup"
              }
            ],
            "Subnets": {
              "Ref": "SubnetIDs"
            }
          }
        },
        "PlatformVersion": "LATEST",
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 100,
          "DeploymentCircuitBreaker": {
            "Enable": false,
            "Rollback": false
          }
        },
        "DeploymentController": {
          "Type": "ECS"
        },
        "ServiceConnectConfiguration": {
          "Enabled": false
        },
        "Tags": [],
        "EnableECSManagedTags": true
      },
      "DependsOn": [
        "Listener"
      ]
    },
    "SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Created in ECS Console",
        "GroupName": "dashboardapi-elb-sg",
        "VpcId": "vpc-0e32079ae4c6e7a58",
        "SecurityGroupIngress": [
          {
            "FromPort": 80,
            "ToPort": 80,
            "IpProtocol": "tcp",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "FromPort": 80,
            "ToPort": 80,
            "IpProtocol": "tcp",
            "CidrIpv6": "::/0"
          },
          {
            "FromPort": 8080,
            "ToPort": 8080,
            "IpProtocol": "tcp",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "FromPort": 8080,
            "ToPort": 8080,
            "IpProtocol": "tcp",
            "CidrIpv6": "::/0"
          }
        ]
      }
    },
    "LoadBalancer": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Type": "application",
        "Name": "dashboardapiecs",
        "SecurityGroups": [
          {
            "Ref": "SecurityGroup"
          }
        ],
        "Subnets": {
          "Ref": "SubnetIDs"
        }
      }
    },
    "TargetGroup": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "HealthCheckPath": "/companies/1",
        "Name": "ecs-dashbo-dashboardapi-service",
        "Port": 80,
        "Protocol": "HTTP",
        "TargetType": "ip",
        "HealthCheckProtocol": "HTTP",
        "VpcId": {
          "Ref": "VpcID"
        },
        "TargetGroupAttributes": [
          {
            "Key": "deregistration_delay.timeout_seconds",
            "Value": "300"
          }
        ]
      }
    },
    "Listener": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "Type": "forward",
            "TargetGroupArn": {
              "Ref": "TargetGroup"
            }
          }
        ],
        "LoadBalancerArn": {
          "Ref": "LoadBalancer"
        },
        "Port": 80,
        "Protocol": "HTTP"
      }
    }
  },
  "Outputs": {
    "ClusterName": {
      "Description": "The cluster used to create the service.",
      "Value": {
        "Ref": "ECSClusterName"
      }
    },
    "ECSService": {
      "Description": "The created service.",
      "Value": {
        "Ref": "ECSService"
      }
    },
    "LoadBalancer": {
      "Description": "The created load balancer.",
      "Value": {
        "Ref": "LoadBalancer"
      }
    },
    "Listener": {
      "Description": "The created listener.",
      "Value": {
        "Ref": "Listener"
      }
    },
    "TargetGroup": {
      "Description": "The created target group.",
      "Value": {
        "Ref": "TargetGroup"
      }
    }
  }
}
